Fix #353 Display sub menu items on mobile - previously disabled as thought not working, since found to be bug in Moodle 2.9.2, feature works in higher fix releases.

--- a/style/menu.css
+++ b/style/menu.css
@@ -234,10 +234,6 @@ color: [[setting:headertextcolor]];
     height: 38px;
   }
 
-.navbar .dropdown-submenu .dropdown-toggle{
-    display: none;
-}
-
   .nav-collapse .nav {
     width:100%;
     margin-left: 0px !important;
